Agregar funcionalidad de verificación de certificados, incluyendo un nuevo componente CertificateVerification, servicios para manejar la verificación y generación de certificados PDF, y la integración con Google Sheets. Se actualizan las configuraciones de entorno y se añaden nuevos activos gráficos.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Google Credentials
+src/infrastructure/config/google-credentials.json
+src/infrastructure/config/gen-lang-client-*.json
