--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,14 +1,14 @@
-# Configuración para SPA (Single Page Application)
+# Configuración para SPA (Single Page Application) en Hostinger
 RewriteEngine On
 RewriteBase /
 
-# Handle Angular and React Router
+# Handle React Router - Redirigir todas las rutas a index.html
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.html [L]
 
-# Configuración de cache
+# Configuración de cache para mejor rendimiento
 <IfModule mod_expires.c>
     ExpiresActive on
     ExpiresByType text/css "access plus 1 year"
@@ -21,7 +21,7 @@ RewriteRule . /index.html [L]
     ExpiresByType image/webp "access plus 1 year"
 </IfModule>
 
-# Compresión GZIP
+# Compresión GZIP para mejor velocidad
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/plain
     AddOutputFilterByType DEFLATE text/html
@@ -34,7 +34,7 @@ RewriteRule . /index.html [L]
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# Seguridad
+# Configuración de seguridad
 <IfModule mod_headers.c>
     Header always set X-Frame-Options DENY
     Header always set X-Content-Type-Options nosniff
